# subtitles

./: .gitignore  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
app/pages/: index.vue
app/utils/: index.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command.rs  global.rs  lib.rs  main.rs  tray_icon.rs
src-tauri/src/funasr/: mod.rs
src-tauri/src/funasr/models/: mod.rs  paraformer.rs  sense_voice.rs  utils.rs  vad.rs
src-tauri/src/funasr/utils/: constant.rs  download.rs  e2e_vad.rs  fbank.rs  frontend.rs  mod.rs  recorder.rs  session.rs  token.rs
src-tauri/src/utils/: log.rs  mod.rs
